[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule-virt_lightning
url = https://github.com/ansible-community/molecule-virt_lightning
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-virt_lightning/issues
    Release Management = https://github.com/ansible-community/molecule-virt_lightning/releases
    Source Code = https://github.com/ansible-community/molecule-virt_lightning
description = Virt-Lightning Molecule Plugin :: run molecule tests using Virt-Lightning
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Gonéri Le Bouder
author_email = goneri@lebouder.net
maintainer = Gonéri Le Bouder
maintainer_email = goneri@lebouder.net
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    libvirt

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    ansible >= 2.9.5
    molecule >= 3.0.2
    virt-lightning

[options.entry_points]
molecule.driver =
    virt_lightning = molecule_virt_lightning.driver:Virt_Lightning

[options.packages.find]
where = .
